# my_robot_project

./: .gitignorees
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  hardware_status_publisher.cpp  my_first_node.cpp  number_counter.cpp  number_publisher.cpp  reset_counter_client.cpp  robot_news_stations.cpp  smartphone.cpp  template_node.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  battery_node.py  hardware_status_publisher.py  led_panel_node.py  my_first_node.py  number_counter.py  number_publisher.py  reset_counter_client.py  robot_news_station.py  smartphone.py  template_node.py
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: gazebo_bridge.yaml  rover_bridge.yaml
src/my_robot_bringup/launch/: k_rover_gazebo.launch.xml  my_robot_gazebo.launch.xml
src/my_robot_bringup/worlds/: test_worlds.sdf
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: display.launch.py  display.launch.xml  rover_display.launch.xml
src/my_robot_description/rviz/: rover_config.rviz  urdf_config.rviz
src/my_robot_description/urdf/: common_properties.urdf.xacro  mobile_base.urdf.xacro  mobile_base_gazebo.urdf.xacro  my_robot.urdf.xacro  rover.urdf.xacro  rover_essentials.urdf.xacro  rover_mobile_base.urdf.xacro  rover_mobile_base_gazebo.urdf.xacro
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_robot_interfaces/msg/: HardwareStatus.msg
src/my_robot_interfaces/srv/: ComputeRectangleArea.srv
